# e_university_api

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  alembic.ini  db.py  docker-compose.yml  gunicorn.conf.py  loggers.py  main.py  pyproject.toml  pytest.ini  requirements.txt  settings.py  tags_metadata.py  utils.py
alembic/: README  env.py
alembic/versions/: 0001.py  0002.py  0003.py  0004.py  0011.py
apps/: jsend.py  main.py
apps/authorization/: handlers.py  models.py  routers.py  schemas.py  services.py
apps/common/: db.py  dependencies.py  email_sender_manager.py  enums.py  exception_handlers.py  exceptions.py  file_manager.py  file_managers.py  schemas.py  send_email.py  services.py  utils.py
apps/components/: exception_handlers.py  exceptions.py  utils.py
apps/core/: db.py  service.py
apps/educational_institutions/: handlers.py  models.py  routers.py  schemas.py  services.py
apps/educational_instuctions/: handlers.py  schemas.py
apps/educational_instuctions/temp/: faculty_list_view.py
apps/hostel/: enums.py  handlers.py  models.py  routers.py  schemas.py  services.py
apps/hostel/temp/: hostel_list_view.py
apps/services/: bed_place.py  enums.py  handlers.py  models.py  routers.py  schemas.py  services.py  utils.py
apps/services/temp/: user_request_booking_hostel_view.py
apps/templates/: hostel_booking_template.docx  hostel_warrant_template.docx
apps/templates/email/: email.html
apps/users/: enums.py  handlers.py  models.py  routers.py  schemas.py  serivces.py  services.py
apps/users/temp/: user_request_exist_view.py  user_request_list_view.py
apps/users/temp/auth/: auth.py  check_student_existance.py  me.py
components/: ecxeption_handlers.py  email_validator.py  enums.py  exception_handlers.py  exceptions.py  utils.py
handlers/: bed_place.py  bed_places.py  course.py  current_user.py  faculty.py  hostel.py  me.py  role.py  speciality.py  student.py  user.py  user_documents.py  user_request.py
handlers/authorization/: auth.py  check_student_existance.py  registration.py
local/: docker-compose.example.yml  example.env
migrations/: data.sql  main.sql
models/: accomodation_order_view.py  action.py  bed_place.py  bed_places.py  commandant.py  course.py  course_list_view.py  dekan.py  faculty.py  faculty_list_view.py  hostel.py  hostel_accommodation_view.py  hostel_list_view.py  one_time_token.py  rector.py  requisites.py  role.py  service.py  speciality.py  speciality_list_view.py  status.py  student.py  students_list_view.py  university.py  user.py  user_document.py  user_documents_view.py  user_faculty.py  user_list_view.py  user_request.py  user_request_booking_hostel_view.py  user_request_details_view.py  user_request_exist_view.py  user_request_list_view.py  user_request_review.py  user_request_status.py
schemas/: auth.py  bed_place.py  bed_places.py  course.py  create_user.py  current_user.py  faculty.py  hostel.py  jsend.py  role.py  speciality.py  student.py  user.py  user_documents.py  user_request.py
settings/: globals.py  settings.py
storage/settlement_hostel/: hostel_settlement_2022-07-07 22:35:55.969114_None
templates/: hostel_booking_template.docx
tests/: bases.py  conftest.py
tests/apps/: conftest.py
tests/apps/authorization/: factories.py  test_auth_routers.py  test_authorization_tables.py
tests/apps/educational_institution/: factories.py  test_edu_routers.py  test_educational_institution_tables.py
tests/apps/hostel/: factories.py  test_hostel_routers.py  test_hostel_tables.py  test_models.py  test_routers.py  test_tables.py
tests/apps/services/: factories.py  test_service_routers.py  test_services_tables.py
tests/apps/users/: factories.py  test_users_routers.py  test_users_tables.py
tests/samples/: Form.xlsx
