[tool.poetry]
name = "e-university-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.8"
fastapi = "0.78.0"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
uvicorn = "0.17.6"
asyncpg = "0.25.0"
psycopg2-binary = "2.9.3"
databases = "0.6.0"
translitua = "1.3.1"
python-jose = {version = "3.3.0", extras = ["cryptography"]}
passlib = {version = "1.7.4", extras = ["bcrypt"]}
python-multipart = "0.0.5"
docxtpl = "0.16.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
pytest-asyncio = "^0.20.1"
pytest-mock = "^3.10.0"
pytest-sugar = "^0.9.6"
pytest-cov = "^4.0.0"
faker = "^15.3.1"



[tool.poetry.group.lint.dependencies]
black = "^22.10.0"
flake8-docstrings = "^1.6.0"
xenon = "^0.9.0"
isort = "^5.10.1"
mypy = "^0.990"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
