[tool.poetry]
name = "e-university-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.8"
fastapi = "0.78.0"
uvicorn = "0.17.6"
pydantic = {version = "^1.10.2", extras = ["dotenv"]}
translitua = "1.3.1"
python-jose = {version = "3.3.0", extras = ["cryptography"]}
passlib = {version = "1.7.4", extras = ["bcrypt"]}
asyncpg = "0.25.0"
psycopg2-binary = "2.9.3"
databases = "0.6.0"
docxtpl = "0.16.0"
python-multipart = "0.0.5"
xlrd = "1.2.0"
alembic = "1.9.1"
sqlalchemy-utils = "0.39.0"
python-dateutil = "2.8.2"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
black = "^22.10.0"
flake8-docstrings = "^1.6.0"
flake8 = "^5.0.4"
xenon = "^0.9.0"
isort = "^5.10.1"
mypy = "^0.990"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
pytest-asyncio = "^0.20.2"
pytest-mock = "^3.10.0"
pytest-sugar = "^0.9.6"
pytest-cov = "^4.0.0"
faker = "^15.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
