[tool.poetry]
name = "e-university-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.8"
fastapi = "0.78.0"
uvicorn = "0.17.6"
pydantic = {version = "^1.10.2", extras = ["dotenv"]}
translitua = "1.3.1"
python-jose = {version = "3.3.0", extras = ["cryptography"]}
passlib = {version = "1.7.4", extras = ["bcrypt"]}
asyncpg = "0.25.0"
psycopg2-binary = "2.9.3"
databases = "0.6.0"
docxtpl = "0.16.0"
python-multipart = "0.0.5"
xlrd = "1.2.0"
alembic = "1.9.1"
sqlalchemy-utils = "0.39.0"
python-dateutil = "2.8.2"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
black = "^22.10.0"
flake8-docstrings = "^1.6.0"
flake8 = "^5.0.4"
xenon = "^0.9.0"
isort = "^5.10.1"
mypy = "^0.990"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
pytest-asyncio = "^0.20.2"
pytest-mock = "^3.10.0"
pytest-sugar = "^0.9.6"
pytest-cov = "^4.0.0"
pytest-randomly = "^3.12.0"
pytest-clarity = "^1.0.1"
faker = "^15.3.1"
pydantic-factories = "^1.7.0"
pytest-alembic = "^0.8.4"
httpx = "^0.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'
extend-exclude = '''
/(
  | dist
  | .pytest_cache
  | .tox
  | docs
  | docs_src
  | .venv
  | .mypy_cache
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = []

[tool.mypy]
ignore_missing_imports = true


[tool.pytest.ini_options]
python_classes = "Test*"

norecursedirs = ["venv", ".venv", ".env", "migrations",]
testpaths = ["tests",]
python_files = ["test*.py", "*test.py"]
python_functions = ["*_test", "test_*"]
console_output_style = "progress"
asyncio_mode = "auto"
log_cli = true